# FedGA

./: .gitignore  README.md  fedlearn.py  fedlearnParallel.py  pyproject.toml
configs/: config_CIFAR10.yaml  config_MNIST.yaml  config_SVHN.yaml  sgd-param.csv
fedga/core/: FedAvgX.py  api.py
fedga/models/: __init__.py  efficientnet.py  lenet.py  mlp.py  operation.py  resnet.py
fedga/utils/: config.py  config_default.yaml  data.py  log.py  metrics.py  tools.py
